...
            .toolbar {
                if walletViewModel.isSetup {
                    ToolbarItem(placement: .primaryAction) {
                        Button {
                            showSettings = true
                        } label: {
                            Image(systemName: "gearshape")
                        }
                    }
                }
            }
            .sheet(isPresented: $showDeposit) {
                DepositView(ndk: ndk, walletViewModel: walletViewModel)
...
